examples/failing/TypeSynonyms3.purs
module Main where

class Foo a where
  foo :: a -> String

type Bar = String

instance fooBar :: Foo Bar where
  foo s = s
